Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@
 .bio {
   text-align: center;
   margin-top: 16px;
+      text-align: center;
+    width: 90%;
+    margin-top: 16px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .bio a{
   color: orange;
